--- a/docs/tutorials/earth_surface_water.ipynb
+++ b/docs/tutorials/earth_surface_water.ipynb
@@ -842,12 +842,12 @@
     "        alpha: Transparency level for the mask overlay.\n",
     "    \"\"\"\n",
     "    for img, mask, ax in zip(images, masks, axs):\n",
-    "        img_cpu = img.cpu() if isinstance(img, torch.Tensor) else img\n",
+    "        img_cpu = img.cpu()\n",
     "        arr = torch.clamp(bright * img_cpu, min=0, max=1).numpy()\n",
     "        rgb = arr.transpose(1, 2, 0)[:, :, chnls]\n",
     "        ax.imshow(rgb)\n",
     "\n",
-    "        mask_cpu = mask.cpu() if isinstance(mask, torch.Tensor) else mask\n",
+    "        mask_cpu = mask.cpu()\n",
     "        msk = mask_cpu.squeeze().numpy()\n",
     "\n",
     "        overlay = np.ma.masked_where(msk == 0, msk)\n",
@@ -862,7 +862,6 @@
     "    bright: float = 3.0,\n",
     "    width: int = 5,\n",
     "    chnls: list[int] = [2, 1, 0],\n",
-    "    threshold: float = 0.5,\n",
     "    batch_tfms: Callable | None = None,\n",
     "    alpha: float = 0.5,\n",
     "):\n",
@@ -875,7 +874,6 @@
     "        bright: Brightness factor for the base image.\n",
     "        width: Width of each subplot.\n",
     "        chnls: List of channel indices to use for RGB.\n",
-    "        threshold: Threshold for converting probabilities to binary mask.\n",
     "        batch_tfms: Optional transformations to apply to the input batch.\n",
     "        alpha: Transparency level for the mask overlay.\n",
     "    \"\"\"\n",
@@ -892,13 +890,11 @@
     "    if batch_tfms is not None:\n",
     "        model_inputs = batch_tfms(inputs)\n",
     "    else:\n",
-    "        model_inputs = inputs.clone()\n",
+    "        model_inputs = inputs\n",
     "\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        preds = model(model_inputs)['out']\n",
-    "        preds = torch.sigmoid(preds)\n",
-    "        preds = (preds > threshold).float()\n",
     "        preds = torch.argmax(preds, dim=1)\n",
     "\n",
     "    inputs = inputs.cpu()\n",
