Documentation: fix broken or redirected links (#3413)

--- a/docs/tutorials/earth_surface_water.ipynb
+++ b/docs/tutorials/earth_surface_water.ipynb
@@ -453,7 +453,7 @@
     "\n",
     "To do that, we need to first find the mean and standard deviation for each one of the 6s channels in the dataset.\n",
     "\n",
-    "Let’s define a function calculate these statistics and write its results in the variables mean and std. We will use our previously installed rasterio package to open the images and perform a simple average over the statistics for each batch/channel. For the standard deviation, this method is an approximation. For a more precise calculation, please refer to: http://notmatthancock.github.io/2017/03/23/simple-batch-stat-updates.htm."
+    "Let’s define a function calculate these statistics and write its results in the variables mean and std. We will use our previously installed rasterio package to open the images and perform a simple average over the statistics for each batch/channel. For the standard deviation, this method is an approximation. For a more precise calculation, please refer to: http://notmatthancock.github.io/2017/03/23/simple-batch-stat-updates.html."
    ]
   },
   {
@@ -562,7 +562,7 @@
     "id": "bMmXdpZWSSNR"
    },
    "source": [
-    "For the semantic segmentation model, we are going to use a predefined architecture that is available in Pytorch. Looking at list (https://pytorch.org/vision/stable/models.html#semantic-segmentation) it is possible to note 3 models available for semantic segmentation, but one (LRASPP) is intended for mobile applications. In our tutorial, we will use the DeepLabV3 model.\n",
+    "For the semantic segmentation model, we are going to use a predefined architecture that is available in Pytorch. Looking at list (https://docs.pytorch.org/vision/stable/models.html#semantic-segmentation) it is possible to note 3 models available for semantic segmentation, but one (LRASPP) is intended for mobile applications. In our tutorial, we will use the DeepLabV3 model.\n",
     "\n",
     "Here, we will create a DeepLabV3 model for 2 classes. In this case, I will skip the pretrained weights, as the weights represent another domain (not water segmentation from multispectral imagery)."
    ]
