--- a/docs/tutorials/geospatial.ipynb
+++ b/docs/tutorials/geospatial.ipynb
@@ -249,7 +249,7 @@
     "There are literally thousands of different projections out there, and every dataset (or even different images within a single dataset) can have different projections. Even if you correctly georeference images during indexing, if you forget to project them to a common CRS, you can end up with rotated images with nodata values around them, and the images will not be pixel-aligned.\n",
     "\n",
     "<center>\n",
-    "<img src=\"https://pytorch.org/assets/images/torchgeo-reproject.png\" width=\"800\">\n",
+    "<img src=\"https://docs.pytorch.org/assets/images/torchgeo-reproject.png\" width=\"800\">\n",
     "</center>\n",
     "\n",
     "We can use a command like:\n",
