--- a/docs/tutorials/transforms.ipynb
+++ b/docs/tutorials/transforms.ipynb
@@ -647,7 +647,7 @@
     "To learn more about preprocessing and data augmentation transforms, the following external resources may be helpful:\n",
     "\n",
     "* [Kornia augmentations](https://kornia.readthedocs.io/en/latest/augmentation.html)\n",
-    "* [torchvision transforms](https://pytorch.org/vision/main/transforms.html)"
+    "* [torchvision transforms](https://docs.pytorch.org/vision/main/transforms.html)"
    ]
   }
  ],
