Documentation: redesign and reorganize dataset tables (#3409)
* Documentation: redesign and reorganize dataset tables

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

* Finish sorting

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

* Move license column to the end

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

* Avoid datasets/models lists on left-hand menu

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

* Avoid datasets/models lists on left-hand menu

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

* Update contributing docs

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

* Avoid datasets/models lists on left-hand menu

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

* Avoid datasets/models lists on left-hand menu

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

---------

Signed-off-by: Adam J. Stewart <ajstewart426@gmail.com>

--- a/docs/tutorials/contribute_non_geo_dataset.ipynb
+++ b/docs/tutorials/contribute_non_geo_dataset.ipynb
@@ -70,7 +70,7 @@
     "1. a `dataset_name.py` file itself that implements the logic of the dataset\n",
     "2. a `data.py` file that creates dummy data in the same structure and format as the original dataset for unit tests\n",
     "3. a `test_dataset_name.py` file that implements unit tests for the dataset\n",
-    "4. documentation: a new `dataset-name.rst` file in `docs/api/datasets/`, an entry in `non_geo_datasets.csv`, and an entry in the toctree in `datasets.rst`"
+    "4. a `dataset-name.rst` file and an entry in one of `*.csv` in `docs/api/datasets/`"
    ]
   },
   {
